USD Export: Texture alpha (A) channel from shader graph being remapped to red (R) #105621

Closed
opened 2023-03-10 01:58:36 +01:00 by fargofajgofargo · 5 comments

System Information
Operating system: MacOS
Graphics card: Apple

Blender Version
Broken: 3.6.0 (2023-03-09), universal-scene-description
Worked:

Short description of error

Exact steps for others to reproduce the error
Create a simple plane with a Principled BSDF material. Add an image texture node to the material and load an RGBA image. Connect the material Color to the BSDF BaseColor, and Alpha to Opacity. This should look correct in the render. Now export a USD file, in any format. You will see that the R channel is being mapped to Alpha, rather than A, as expected.

**System Information** Operating system: MacOS Graphics card: Apple **Blender Version** Broken: 3.6.0 (2023-03-09), universal-scene-description Worked: **Short description of error** **Exact steps for others to reproduce the error** Create a simple plane with a Principled BSDF material. Add an image texture node to the material and load an RGBA image. Connect the material Color to the BSDF BaseColor, and Alpha to Opacity. This should look correct in the render. Now export a USD file, in any format. You will see that the R channel is being mapped to Alpha, rather than A, as expected.
fargofajgofargo added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-10 01:58:36 +01:00
Member

Hi, thanks for the report. Do you use some USD viewer software to verify it?
I imported back the file in blender, I noticed the color socket is passed to alpha socket of principled BSDF. So something is indeed wrong while exporting as USD.

Hi, thanks for the report. Do you use some USD viewer software to verify it? I imported back the file in blender, I noticed the color socket is passed to alpha socket of principled BSDF. So something is indeed wrong while exporting as USD.
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-03-10 06:23:16 +01:00

Thanks, Pratik. Verified in usdview, as well as AR Quick Look for MacOS and iOS.

Thanks, Pratik. Verified in usdview, as well as AR Quick Look for MacOS and iOS.
Member

Thanks. @makowalski , can you check?

Thanks. @makowalski , can you check?

@PratikPB2123 Thanks for reporting this. I have verified the issue. There may already be a pull request to address this, but I need to verify this. If there isn't, I'll create a new patch to address this.

@PratikPB2123 Thanks for reporting this. I have verified the issue. There may already be a pull request to address this, but I need to verify this. If there isn't, I'll create a new patch to address this.
Michael Kowalski self-assigned this 2023-04-17 03:48:43 +02:00

I've addressed this bug in pull request #107022.

I've addressed this bug in pull request https://projects.blender.org/blender/blender/pulls/107022.
Michael Kowalski added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-04-17 16:37:59 +02:00
Michael Kowalski added
Module
Pipeline, Assets & IO
and removed
Module
Platforms, Builds & Tests
labels 2023-04-17 17:37:07 +02:00
Michael Kowalski added
Type
Bug
and removed
Type
Report
labels 2023-04-17 17:41:04 +02:00
Michael Kowalski added this to the USD project 2023-04-17 18:21:03 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-03 16:13:02 +02:00
Bastien Montagne removed this from the USD project 2023-08-25 23:52:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105621
No description provided.