USD export: Fix incorrect texture alpha mapping.

This addresses bug #105621.

Fixed bug where texture alpha was incorrectly remapped to red.
Now connecting the UsdPreviewSurface "opacity" input to the
UsdUVTexture "a" output.